[gd_scene load_steps=4 format=3 uid="uid://ckbnfxtwa4po5"]

[ext_resource type="Texture2D" uid="uid://bdwf03025qcs" path="res://textures/1-caracas-without-mining.png" id="1_jxb3w"]
[ext_resource type="Script" uid="uid://bxk7s0313hxvr" path="res://scripts/right_sidebar.gd" id="1_tu0j1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u5sy4"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(1, 1, 0.8627451, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="RightSidebar" type="FoldableContainer"]
custom_minimum_size = Vector2(320, 0)
size_flags_horizontal = 8
title = "Current Turn:"
script = ExtResource("1_tu0j1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Content" type="VBoxContainer" parent="MarginContainer"]
clip_contents = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="MovementContainer" type="VBoxContainer" parent="MarginContainer/Content"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="MovementResult" type="HBoxContainer" parent="MarginContainer/Content/MovementContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MovementButton" type="Button" parent="MarginContainer/Content/MovementContainer/MovementResult"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Roll Dices"

[node name="Panel" type="Panel" parent="MarginContainer/Content/MovementContainer/MovementResult"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_u5sy4")

[node name="Dice1Label" type="Label" parent="MarginContainer/Content/MovementContainer/MovementResult/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = " "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="MarginContainer/Content/MovementContainer/MovementResult"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_u5sy4")

[node name="Dice2Label" type="Label" parent="MarginContainer/Content/MovementContainer/MovementResult/Panel2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = " "
horizontal_alignment = 1
vertical_alignment = 1

[node name="TileTypeLabel" type="Label" parent="MarginContainer/Content"]
unique_name_in_owner = true
layout_mode = 2
text = "You landed on a: Property"

[node name="PropertyContainer" type="VBoxContainer" parent="MarginContainer/Content"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="Image" type="TextureRect" parent="MarginContainer/Content/PropertyContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
texture = ExtResource("1_jxb3w")
expand_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Content/PropertyContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Content/PropertyContainer/HBoxContainer"]
layout_mode = 2
text = "Price:"

[node name="Label2" type="Label" parent="MarginContainer/Content/PropertyContainer/HBoxContainer"]
layout_mode = 2
text = "1 EVA"

[node name="Button2" type="Button" parent="MarginContainer/Content/PropertyContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Buy Property"

[node name="TimerContainer" type="HBoxContainer" parent="MarginContainer/Content"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/Content/TimerContainer"]
layout_mode = 2
text = "Time"

[node name="TimerBar" type="ProgressBar" parent="MarginContainer/Content/TimerContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 60.0
step = 1.0

[node name="TimerLabel" type="Label" parent="MarginContainer/Content/TimerContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "30s"

[node name="EndTurnButton" type="Button" parent="MarginContainer/Content"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = " End  Turn"
